@@ -225,6 +225,13 @@ obtained by adding up the numbers.
 
 </para><para>
 
+By default the installer will install the GNOME desktop environment, but
+alternative desktop environments can be selected either by using one
+of the special CD images, or by specifying the desired desktop environment
+when the installer is booted (see <xref linkend="pkgsel"/>).
+
+</para><para>
+
 Note that you will need to add the sizes listed in the table to the size
 of the standard installation when determining the size of partitions.
 Most of the size listed as <quote>Installed size</quote> will end up in
@@ -247,9 +254,33 @@ is (temporarily) required in <filename>/var</filename>.
 <tbody>
 <row>
   <entry>Desktop environment</entry>
-  <entry>&task-desktop-inst;</entry>
-  <entry>&task-desktop-dl;</entry>
-  <entry>&task-desktop-tot;</entry>
+  <entry>&nbsp;</entry>
+  <entry>&nbsp;</entry>
+  <entry>&nbsp;</entry>
+</row>
+<row>
+  <entry>&nbsp;&nbsp;&bull;&nbsp;GNOME (default)</entry>
+  <entry>&task-desktop-gnome-inst;</entry>
+  <entry>&task-desktop-gnome-dl;</entry>
+  <entry>&task-desktop-gnome-tot;</entry>
+</row>
+<row>
+  <entry>&nbsp;&nbsp;&bull;&nbsp;KDE</entry>
+  <entry>&task-desktop-kde-inst;</entry>
+  <entry>&task-desktop-kde-dl;</entry>
+  <entry>&task-desktop-kde-tot;</entry>
+</row>
+<row>
+  <entry>&nbsp;&nbsp;&bull;&nbsp;Xfce</entry>
+  <entry>&task-desktop-xfce-inst;</entry>
+  <entry>&task-desktop-xfce-dl;</entry>
+  <entry>&task-desktop-xfce-tot;</entry>
+</row>
+<row>
+  <entry>&nbsp;&nbsp;&bull;&nbsp;LXDE</entry>
+  <entry>&task-desktop-lxde-inst;</entry>
+  <entry>&task-desktop-lxde-dl;</entry>
+  <entry>&task-desktop-lxde-tot;</entry>
 </row>
 
 <row>
@@ -311,13 +342,6 @@ is (temporarily) required in <filename>/var</filename>.
 
 </tbody>
 </tgroup></informaltable>
-
-<note><para>
-
-The <emphasis>Desktop</emphasis> task will install the GNOME desktop
-environment.
-
-</para></note>
 
 </para><para>
 
