@@ -49,9 +49,7 @@ deselect them. You can even opt to install no tasks at all at this point.
 </para>
 <note><para>
 
-<!-- TODO: Explain the "Standard system" task first -->
-
-Unless you are using the special KDE or Xfce CDs, the <quote>Desktop
+Unless you are using the special KDE or Xfce/LXDE CDs, the <quote>Desktop
 environment</quote> task will install the GNOME desktop environment.
 
 </para><para>
@@ -61,18 +59,28 @@ the installation. However, it <emphasis>is</emphasis> possible to get &d-i;
 to install a KDE desktop environment instead of GNOME by using preseeding
 (see <xref linkend="preseed-pkgsel"/>) or by adding the parameter
 <literal>desktop=kde</literal> at the boot prompt when starting the
-installer. Alternatively the more lightweight Xfce desktop environment can
-be selected by using <literal>desktop=xfce</literal>.
+installer. Alternatively the more lightweight Xfce and LXDE desktop
+environments can be selected by using <literal>desktop=xfce</literal> or
+<literal>desktop=lxde</literal>.
+
+</para><para arch="x86">
+
+Some CD images (businesscard, netinst and DVD) also allow selection of
+the desired desktop environment from the graphical boot menu. Select the
+<quote>Advanced options</quote> option in the main menu and look for
+<quote>Alternative desktop environments</quote>.
 
 </para><para>
 
-Note that this will only work if the packages needed for KDE or Xfce
+Note that this will only work if the packages needed for the desired
+desktop environment
 are actually available. If you are installing using a single full CD image,
 they will need to be downloaded from a mirror as most needed packages are
-only included on later CDs; installing KDE or Xfce this way should work
+only included on later CDs; installing KDE, Xfce or LXDE this way should work
 fine if you are using a DVD image or any other installation method.
 
-</para><para>
+</para></note>
+<para>
 
 The various server tasks will install software roughly as follows.
 DNS server: <classname>bind9</classname>;
@@ -83,8 +91,15 @@ Print server: <classname>cups</classname>;
 SQL database: <classname>postgresql</classname>;
 Web server: <classname>apache2</classname>.
 
-</para></note>
-<para>
+</para><para>
+
+The <quote>Standard system</quote> task will install any package that
+has a priority <quote>standard</quote>. This includes a lot of common
+utilities that are normally available on any Linux or Unix system. You
+should leave this task selected unless you know what you are doing and
+want a really minimal system.
+
+</para><para>
 
 Once you've selected your tasks, select &BTN-CONT;. At this point,
 <command>aptitude</command> will install the packages that are part
