@@ -20,8 +20,12 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Document preseeding of network-console now that its postinst can be
     relied on to be executed.
   * Update info on passing boot parameter for PPPoE.
+  * Explain Standard system task.
+  * Add LXDE desktop environment.
+  * Mention option to select desktop environment from boot menu for x86 CDs.
+  * Add task sizes for alternative desktop environments.
 
- -- Frans Pop <fjp@debian.org>  Fri, 16 Jan 2009 18:07:04 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 05 Apr 2009 23:55:26 +0200
 
 installation-guide (20081208) unstable; urgency=low
 
